--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
         <img src="img/git.png">
         <h1> Curso git </h1>
     </div>
+    <div>
+        kdjngdfkjgkdjf
+    </div>
 </body>
 </html>
