--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Git Class</title>
 </head>
 <body>
-    <div>
-        <img src="img/git.png">
+    <div class="nadvar">
+        <img class="logo" src="img/git.png">
         <h1> Curso git </h1>
     </div>
     <div>
